--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Wesley Scafe Portfolio
+email: scafe.wesley@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -13,3 +13,4 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 permalink: pretty
+remote_theme: midzer/urban-theme
